--- a/jphdemowebsite.html
+++ b/jphdemowebsite.html
@@ -376,9 +376,7 @@
                 <a href="https://www.nps.gov/places/va-wildlife-loop.htm" target="_blank"><strong>Chincoteague
                         National
                         Wildlife Refuge: Wildlife Loop</strong></a>
-                <em>Walk or bike the loop and spot wild ponies, deer, and dozens of bird species. Enjoy wildlife
-                    photography,
-                    fishing, and crabbing of course!</em>
+                <em>Walk or bike the loop and spot wild ponies, deer, and dozens of bird species.</em>
             </li>
             <li>
                 <a href="https://www.nps.gov/asis/planyourvisit/hours.htm" target="_blank"><strong>Assateague Island
